fixed: selected bucket task clipping

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -61,7 +61,7 @@ body
     .task
       background-color: selected-task-border-color
       color: #fff
-      border: none
+      border-color: selected-task-border-color
     .task.selected
       border: 1px solid selected-task-border-color
       background-color: selected-task-background-color
@@ -94,10 +94,9 @@ body
   margin-left: -(@width / 2)
   margin-top: -(@height / 2)
 
-  h3
+  h1
     text-align: center
-    color: #eee
-    margin-bottom: 1em
+    color: #ddd
 
   span
     display: block
